# youtube-creator-map

./: .gitignore  .importlinter  README.md  SECURITY.md  THIRD_PARTY_LICENSES.md  _headers  eslint.config.mjs  index.html  index.txt  package-lock.json  package.json  pylock.toml  pyproject.toml  robots.txt  tsconfig.base.json  vercel.json  vitest.config.mts  vitest.setup.ts
.github/workflows/: ci.yml  release.yml  security.yml
.kiro/specs/youtube-creator-training-data-map/: .config.kiro  design.md  requirements.md  tasks.md
404/: index.html
_next/static/chunks/: 18-e59c099b2a012a11.js  407-61acb212446f0c04.js  b597d67a-1565ead7e5bf9467.js  dfb4aedd-969e0389196b01ee.js  main-7074a5f649f6fe35.js  main-app-d81f6226ccdff1bc.js  webpack-ed358c3c90f4ea12.js
_next/static/chunks/app/: layout-ed8d94d320de2627.js  page-a80ee864499f777e.js
_next/static/chunks/app/_not-found/: page-a739b4be462777e0.js
_next/static/chunks/app/methodology/: page-71091e955001ee61.js
_next/static/css/: e82479357c09a044.css
_next/static/lXINLAAIthgXTu_PMGJKe/: _buildManifest.js
apps/web/: next.config.ts  package.json  tsconfig.json  vitest-matchers.d.ts
apps/web/app/: globals.css  journey.dom.test.tsx  layout.a11y.test.tsx  layout.tsx  page.tsx
apps/web/app/methodology/: page.tsx
apps/web/components/: Announcer.test.ts  Announcer.tsx  ChoroplethMap.tsx  CountryDetail.tsx  CountryTable.a11y.test.tsx  CountryTable.tsx  FilterPanel.tsx  HeadlineMetrics.tsx  Legend.tsx  NoIndexWhenDetail.tsx  Panels.a11y.test.tsx  ReleaseContext.tsx  StatePanels.tsx
apps/web/lib/: bins.test.ts  bins.ts  creator-pages.test.ts  filter-resolution.test.ts  fixture-contract.test.ts  format.ts  loader.test.ts  loader.ts  methodology.test.ts  methodology.ts  real-artifacts.test.ts  regions.test.ts  view-state.test.ts  view-state.ts
apps/web/public/: _headers
apps/web/public/boundaries/: countries.json
data/contracts/: youtube-commons-b.json  youtube-commons-v1.json
deploy/: headers.json
methodology/: index.html  index.txt
python/migrations/: 0001_provenance_and_registry.sql  0002_enrichment_and_work_state.sql  0003_policy_release_and_audit.sql  0004_replace_rules_with_triggers.sql  0005_aggregation_indexes.sql  0006_curator_signoff.sql  0007_signoff_key_includes_scope.sql
python/tests/: conftest.py  test_acceptance.py  test_adversarial.py  test_aggregate_properties.py  test_artifacts.py  test_country_detail_properties.py  test_delivery.py  test_disclosure.py  test_domain_contracts.py  test_enrichment_failures_integration.py  test_enrichment_planning.py  test_extraction.py  test_filters.py  test_fixtures.py  test_identity.py  test_ingestion_integration.py  test_leases_integration.py  test_migrations.py  test_neutral_labeling_properties.py  test_pagination.py  test_performance_budget.py  test_publisher.py  test_registry.py  test_release_gates.py  test_release_manager_integration.py  test_scan_bundle.py  test_schema_integration.py  test_security_headers.py  test_signoff_integration.py  test_snapshot.py  test_workspace_boundaries.py
scripts/: build_boundaries.py  build_release.ps1  ci.ps1  deploy_pages.ps1  measure_performance.py  publish.ps1  scan_bundle.py
