[project]
name = "creator-map-workspace"
version = "0.1.0"
requires-python = ">=3.11,<3.13"
dependencies = []

[dependency-groups]
runtime = [
  "click==8.3.3",
  "dagster==1.13.1",
  "duckdb==1.3.1",
  "jsonschema==4.24.0",
  "psycopg[binary]==3.2.9",
  "pyarrow==23.0.1",
  "pydantic==2.11.7",
]
dev = [
  "hypothesis==6.135.20",
  "import-linter==2.3",
  "mypy==1.16.1",
  "pip-audit==2.9.0",
  "pytest==9.0.3",
  "pytest-cov==6.2.1",
  "ruff==0.12.1",
  "setuptools==83.0.0",
]

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers"
testpaths = ["python/tests"]
markers = [
  "integration: requires a live PostgreSQL reachable via DATABASE_URL; skipped otherwise",
]
pythonpath = ["python/packages/schemas/src", "python/packages/restricted-infra/src", "python/packages/pipeline/src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S"]

[tool.ruff.lint.per-file-ignores]
# S101: assert is the point of a test.
# S105/S106: test-only secret literals, never real credentials.
"python/tests/**" = ["S101", "S105", "S106"]
# S608: aggregation composes module-level CTE constants into statement text.
# Every caller-supplied value is bound as a parameter and the one numeric
# interpolation passes through int(); see the module docstring.
"python/packages/pipeline/src/creator_map_pipeline/aggregate/builder.py" = ["S608"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "python/packages/schemas/src;python/packages/restricted-infra/src;python/packages/pipeline/src"
packages = ["creator_map_schemas", "creator_map_restricted", "creator_map_pipeline"]

# pyarrow ships no py.typed marker. Values crossing this boundary are
# converted explicitly at the call site rather than trusted as typed.
[[tool.mypy.overrides]]
module = ["pyarrow.*"]
ignore_missing_imports = true
